force-app/main/default/objects/Loyalty_Retention_Insights__c/fields/Active_Schemes__c.field-meta.xml
<CustomField>
    <fullName>Active_Schemes__c</fullName>
    <label>Active Schemes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>