force-app/main/default/objects/Loyalty_Retention_Insights__c/fields/Churn_Probability_Tag__c.field-meta.xml
<CustomField>
    <fullName>Churn_Probability_Tag__c</fullName>
    <label>Churn Probability Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>