force-app/main/default/objects/Loyalty_Retention_Insights__c/fields/Date_Joined_Loyalty__c.field-meta.xml
<CustomField>
    <fullName>Date_Joined_Loyalty__c</fullName>
    <label>Date Joined Loyalty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>