force-app/main/default/objects/Loyalty_Retention_Insights__c/fields/Days_Since_Last_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Purchase__c</fullName>
    <label>Days Since Last Purchase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>