force-app/main/default/objects/Loyalty_Retention_Insights__c/fields/Expiring_Points_Next_60_Days__c.field-meta.xml
<CustomField>
    <fullName>Expiring_Points_Next_60_Days__c</fullName>
    <label>Expiring Points (Next 60 Days)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>