force-app/main/default/objects/Loyalty_Retention_Insights__c/fields/Last_Redemption_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Redemption_Date__c</fullName>
    <label>Last Redemption Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>