force-app/main/default/objects/Loyalty_Retention_Insights__c/fields/Lifetime_Value_LTV_Band__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Value_LTV_Band__c</fullName>
    <label>Lifetime Value (LTV) Band</label>
    <length>255</length>
    <type>Text</type>
</CustomField>