force-app/main/default/objects/Loyalty_Retention_Insights__c/fields/Loyalty_Communication_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Communication_Opt_In__c</fullName>
    <label>Loyalty Communication Opt-In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>