force-app/main/default/objects/Loyalty_Retention_Insights__c/fields/Loyalty_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Status_Change_Date__c</fullName>
    <label>Loyalty Status Change Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>