force-app/main/default/objects/Loyalty_Retention_Insights__c/fields/Loyalty_Tier__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Tier__c</fullName>
    <label>Loyalty Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>