force-app/main/default/objects/Loyalty_Retention_Insights__c/fields/Loyalty_Upgrade_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Upgrade_Eligibility__c</fullName>
    <label>Loyalty Upgrade Eligibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>