force-app/main/default/objects/Loyalty_Retention_Insights__c/fields/Points_Rewards_Balance__c.field-meta.xml
<CustomField>
    <fullName>Points_Rewards_Balance__c</fullName>
    <label>Points / Rewards Balance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>