force-app/main/default/objects/Loyalty_Retention_Insights__c/fields/Preferred_Reward_Type__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Reward_Type__c</fullName>
    <label>Preferred Reward Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>