force-app/main/default/objects/Loyalty_Retention_Insights__c/fields/Reactivation_Offer_Response__c.field-meta.xml
<CustomField>
    <fullName>Reactivation_Offer_Response__c</fullName>
    <label>Reactivation Offer Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>