force-app/main/default/objects/Loyalty_Retention_Insights__c/fields/Reactivation_Offers_Received__c.field-meta.xml
<CustomField>
    <fullName>Reactivation_Offers_Received__c</fullName>
    <label>Reactivation Offers Received</label>
    <length>255</length>
    <type>Text</type>
</CustomField>