force-app/main/default/objects/Loyalty_Retention_Insights__c/fields/Redemption_Rate__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Rate__c</fullName>
    <label>Redemption Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>