force-app/main/default/objects/Loyalty_Retention_Insights__c/fields/Reward_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Reward_Expiry_Date__c</fullName>
    <label>Reward Expiry Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>