force-app/main/default/objects/Loyalty_Retention_Insights__c/fields/RFM_Score_Recency_Frequency_Monetary__c.field-meta.xml
<CustomField>
    <fullName>RFM_Score_Recency_Frequency_Monetary__c</fullName>
    <label>RFM Score (Recency, Frequency, Monetary)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>