force-app/main/default/objects/Loyalty_Retention_Insights__c/fields/Scheme_Participation_Count__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Participation_Count__c</fullName>
    <label>Scheme Participation Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>